# stufio-modules-activity

./: README.md  __init__.py  __version__.py  pyproject.toml
activity/api/: __init__.py  activities.py  admin_rate_limits.py  admin_security.py  rate_limits.py
activity/middleware/: __init__.py  activity_tracking.py  rate_limiter.py
activity/migrations/v20250305/: 04_add_rate_limit_defaults.py
activity/migrations/v20250309/: 01_create_clickhouse_activity_tables.py
activity/schemas/: security.py
activity/tests/: test_api.py
api/: __init__.py  admin_activities.py  admin_rate_limits.py
crud/: crud_analytics.py  crud_rate_limit.py
middleware/: rate_limiter.py
migrations/v20250305/: 01_init_collections.py  02_create_indexes.py  03_create_clickhouse_tables.py  04_add_rate_limit_defaults.py
migrations/v20250309/: 02_add_rate_limit_overrides.py  02_create_analytics_tables.py
models/: __init__.py  activity.py  rate_limit.py
schemas/: __init__.py  activity.py  analytics.py
stufio/modules/activity/: __init__.py  __version__.py  config.py  events.py  module.py  settings.py
stufio/modules/activity/api/: __init__.py  activities.py  admin_activities.py  admin_analytics.py  admin_rate_limits.py  admin_security.py  rate_limits.py  security.py
stufio/modules/activity/consumers/: __init__.py  activity_consumer.py  api_request_consumer.py
stufio/modules/activity/crud/: __init__.py  crud_activity.py  crud_analytics.py  crud_rate_limit.py
stufio/modules/activity/docs/: activity_module_architecture.dot
tests/: conftest.py
(+27 files in other folders)
