[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stufio-modules-activity"
version = "0.1.0"
description = "Stufio.com Module: User activity tracking and Rate limiting"
authors = [{name = "Ihar Finchuk", email = "if@if.codes"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "stufio>=0.1.0",
]

[project.urls]
repository = "https://github.com/stufio-com/stufio-modules-activity"

[tool.setuptools]
package-dir = {"stufio.modules.activity" = "activity"}
packages.find = {include = ["stufio.modules.activity", "stufio.modules.activity.*"]}
